[post] add workaround Liquid/Stencil syntax conflict
Stencil code is interpreted as Liquid tags which fails so I changed the Stencil
code to use a Liquid variable so it will not be interpreted by Liquid.

--- a/_posts/2017-09-24-AutoInit.md
+++ b/_posts/2017-09-24-AutoInit.md
@@ -66,20 +66,22 @@ public struct Person {
 
 Create a `AutoInit.stencil` file in your Sourcery templates folder with the following content:
 
+{% assign openTag = '{%' %}
+{% assign openSubst = '{{' %}
 ```swift
-{% for type in types.structs %}
-{% if type|annotated:"AutoInit" %}
-{% set spacing %}{% if type.parentName %}    {% endif %}{% endset %}
-{% map type.storedVariables into parameters using var %}{{ var.name }}: {{ var.typeName }}{% endmap %}
-// sourcery:inline:auto:{{ type.name }}.AutoInit
-{{spacing}}    {{ type.accessLevel }} init({{ parameters|join }}) { // swiftlint:disable:this line_length
-{{spacing}}        {% for variable in type.storedVariables %}
-{{spacing}}        self.{{ variable.name }} = {{ variable.name }}
-{{spacing}}        {% endfor %}
-{{spacing}}    }
+{{ openTag }} for type in types.structs %}
+{{ openTag }} if type|annotated:"AutoInit" %}
+{{ openTag }} set spacing %}{{ openTag }} if type.parentName %}    {{ openTag }} endif %}{{ openTag }} endset %}
+{{ openTag }} map type.storedVariables into parameters using var %}{{ openSubst }} var.name }}: {{ openSubst }} var.typeName }}{{ openTag }} endmap %}
+// sourcery:inline:auto:{{ openSubst }} type.name }}.AutoInit
+{{ openSubst }}spacing}}    {{ openSubst }} type.accessLevel }} init({{ openSubst }} parameters|join }}) { // swiftlint:disable:this line_length
+{{ openSubst }}spacing}}        {{ openTag }} for variable in type.storedVariables %}
+{{ openSubst }}spacing}}        self.{{ openSubst }} variable.name }} = {{ openSubst }} variable.name }}
+{{ openSubst }}spacing}}        {{ openTag }} endfor %}
+{{ openSubst }}spacing}}    }
 // sourcery:end
-{% endif %}
-{% endfor %}
+{{ openTag }} endif %}
+{{ openTag }} endfor %}
 ```
 
 This template is also available as a [gist](https://gist.github.com/Liquidsoul/efa4f65af055acfde64afed6cda0007d).
