[post] change headline levels in AutoInit post

--- a/_posts/2017-09-24-AutoInit.md
+++ b/_posts/2017-09-24-AutoInit.md
@@ -3,7 +3,7 @@ layout: post
 title: Generating your `struct`'s `init`
 ---
 
-### `struct`s default initializer
+# `struct`s default initializer
 
 Swift has an awesome feature regarding `struct`s and their initializer. By default, an initializer is generated so you can create your `struct` with the content you want:
 
@@ -41,7 +41,7 @@ And now you have one more problem: you need to update this code every time your 
 
 Wouldn't it be great if we did not have to write and maintain this code?
 
-### Sourcery to the rescue
+# Sourcery to the rescue
 
 [`Sourcery`](https://github.com/krzysztofzablocki/Sourcery) is a code generation tool using `SourceKit` which has several cool features to use in ths case:
 - source annotations
@@ -50,7 +50,7 @@ Wouldn't it be great if we did not have to write and maintain this code?
 I have written a template to generate the `init` method of annotated `struct`s.
 Here is how this works:
 
-#### 1. Annotate the struct
+## 1. Annotate the struct
 
 You add `// sourcery: AutoInit` just before your declaration:
 
@@ -62,7 +62,7 @@ public struct Person {
 }
 ```
 
-#### 2. Add `AutoInit.stencil` to your Sourcery templates
+## 2. Add `AutoInit.stencil` to your Sourcery templates
 
 Create a `AutoInit.stencil` file in your Sourcery templates folder with the following content:
 
@@ -86,7 +86,7 @@ Create a `AutoInit.stencil` file in your Sourcery templates folder with the foll
 
 This template is also available as a [gist](https://gist.github.com/Liquidsoul/efa4f65af055acfde64afed6cda0007d).
 
-#### 3. Run Sourcery
+## 3. Run Sourcery
 
 This will generate the `init` and insert the code right inside the `struct`'s declaration:
 
@@ -108,6 +108,6 @@ public struct Person {
 The template use the [auto-inlining](https://cdn.rawgit.com/krzysztofzablocki/Sourcery/master/docs/writing-templates.html#inline-code-generation) feature of Sourcery.  
 It will take the code between the `inline:auto` annotations and put it directly inside the specified type and then update the code in place when it needs to change.
 
-#### 4. Enjoy
+## 4. Enjoy
 
 You can now access this initializer from outside the module and every time you update the structure declaration, it will update itself (when you run Sourcery of course).
