[post][AutoInit] fix some titles
- remove back-quote from the post title
- use singular in the first section title

--- a/_posts/2017-09-24-AutoInit.md
+++ b/_posts/2017-09-24-AutoInit.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Generating your `struct`'s `init`
+title: Generating the struct's initializer
 ---
 
-# `struct`s default initializer
+# `struct` default initializer
 
 Swift has an awesome feature regarding `struct`s and their initializer. By default, an initializer is generated so you can create your `struct` with the content you want:
 
